fix(splitter): splitter jumps (narrow size), if the block has a min-width (#UIM-49)

--- a/packages/mosaic/splitter/_splitter-theme.scss
+++ b/packages/mosaic/splitter/_splitter-theme.scss
@@ -15,7 +15,7 @@
             background-color: mix(map-get($background, button-bg), map-get($background, hover));
         }
 
-        &.mc-gutter_horizontal {
+        &.mc-gutter_vertical {
             cursor: row-resize;
         }
 
