--- a/packages/mosaic/splitter/splitter.scss
+++ b/packages/mosaic/splitter/splitter.scss
@@ -22,7 +22,7 @@
 
     overflow: hidden;
 
-    &.mc-gutter_horizontal > .mc-icon {
+    &.mc-gutter_vertical > .mc-icon {
         transform: rotate(90deg);
     }
 }
